background-image was updated

--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
             </li>
           </ul>
         </nav>
+
+        <!--<a href="#" class="envelope">
+          <svg class="envelope-icon">
+            <use href="../images/icons.svg#icon-envelope"></use>
+          </svg>
+        </a> -->
+
         <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a class="phone-number" href="tel:+48111111111">+48 111 111 111</a>
       </div>
@@ -56,6 +63,12 @@
         <div class="container">
           <ul class="lorem-ipsum-list">
             <li class="lorem-ipsum-item">
+              <!-- <div class="lorem-ipsum-container-icon">
+                <svg class="lorem-ipsum-icon" width="270" height="120">
+                  <use href="/images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>-->
+
               <p class="section-lorem-title"><b>LOREM IPSUM</b></p>
               <p class="section-lorem-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
