Icons in header and lorem ipsum section were added

--- a/index.html
+++ b/index.html
@@ -38,13 +38,19 @@
           </ul>
         </nav>
 
-        <!--<a href="#" class="envelope">
-          <svg class="envelope-icon">
-            <use href="../images/icons.svg#icon-envelope"></use>
+        <a href="#" class="envelope">
+          <svg class="envelope-icon" width="16" height="12">
+            <use href="/images/icons.svg#icon-envelope"></use>
           </svg>
-        </a> -->
+        </a>
 
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com </a>
+
+        <a href="#" class="smartphone">
+          <svg class="smartphone-icon" width="10" height="16">
+            <use href="/images/icons.svg#icon-smartphone"></use>
+          </svg>
+        </a>
         <a class="phone-number" href="tel:+48111111111">+48 111 111 111</a>
       </div>
     </header>
@@ -63,11 +69,11 @@
         <div class="container">
           <ul class="lorem-ipsum-list">
             <li class="lorem-ipsum-item">
-              <!-- <div class="lorem-ipsum-container-icon">
-                <svg class="lorem-ipsum-icon" width="270" height="120">
+              <div class="lorem-ipsum-container-icon">
+                <svg class="lorem-ipsum-icon">
                   <use href="/images/icons.svg#icon-antenna"></use>
                 </svg>
-              </div>-->
+              </div>
 
               <p class="section-lorem-title"><b>LOREM IPSUM</b></p>
               <p class="section-lorem-text">
@@ -76,6 +82,11 @@
               </p>
             </li>
             <li class="lorem-ipsum-item">
+              <div class="lorem-ipsum-container-icon">
+                <svg class="lorem-ipsum-icon">
+                  <use href="/images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <p class="section-lorem-title"><b>LOREM IPSUM</b></p>
               <p class="section-lorem-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -84,6 +95,11 @@
             </li>
 
             <li class="lorem-ipsum-item">
+              <div class="lorem-ipsum-container-icon">
+                <svg class="lorem-ipsum-icon">
+                  <use href="/images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <p class="section-lorem-title"><b>LOREM IPSUM</b></p>
               <p class="section-lorem-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -92,6 +108,11 @@
             </li>
 
             <li class="lorem-ipsum-item">
+              <div class="lorem-ipsum-container-icon">
+                <svg class="lorem-ipsum-icon">
+                  <use href="/images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <p class="section-lorem-title"><b>LOREM IPSUM</b></p>
               <p class="section-lorem-text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
