Icons in our team section were added

--- a/index.html
+++ b/index.html
@@ -173,6 +173,38 @@
 
               <h3 class="our-team-name">John Doe</h3>
               <p class="our-team-role">Product Designer</p>
+              <div class="social-media">
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a href="#" class="instagram">
+                      <svg class="instagram-icon">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="twitter">
+                      <svg class="twitter-icon">
+                        <use href="/images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="facebook">
+                      <svg class="facebook-icon">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="linkedin">
+                      <svg class="linkedin-icon">
+                        <use href="/images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -186,6 +218,38 @@
 
               <h3 class="our-team-name">John Doe</h3>
               <p class="our-team-role">Frontend Developer</p>
+              <div class="social-media">
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a href="#" class="instagram">
+                      <svg class="instagram-icon">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="twitter">
+                      <svg class="twitter-icon">
+                        <use href="/images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="facebook">
+                      <svg class="facebook-icon">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="linkedin">
+                      <svg class="linkedin-icon">
+                        <use href="/images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -198,6 +262,38 @@
               />
               <h3 class="our-team-name">John Doe</h3>
               <p class="our-team-role">Marketing</p>
+              <div class="social-media">
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a href="#" class="instagram">
+                      <svg class="instagram-icon">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="twitter">
+                      <svg class="twitter-icon">
+                        <use href="/images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="facebook">
+                      <svg class="facebook-icon">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="linkedin">
+                      <svg class="linkedin-icon">
+                        <use href="/images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
 
             <li class="our-team-item">
@@ -210,6 +306,38 @@
               />
               <h3 class="our-team-name">John Doe</h3>
               <p class="our-team-role">UI Designer</p>
+              <div class="social-media">
+                <ul class="social-media-list">
+                  <li class="social-media-item">
+                    <a href="#" class="instagram">
+                      <svg class="instagram-icon">
+                        <use href="/images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="twitter">
+                      <svg class="twitter-icon">
+                        <use href="/images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="facebook">
+                      <svg class="facebook-icon">
+                        <use href="/images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-media-item">
+                    <a href="#" class="linkedin">
+                      <svg class="linkedin-icon">
+                        <use href="/images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
