Icons in Our team section were updated

--- a/index.html
+++ b/index.html
@@ -176,29 +176,29 @@
               <div class="social-media">
                 <ul class="social-media-list">
                   <li class="social-media-item">
-                    <a href="#" class="instagram">
-                      <svg class="instagram-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="twitter">
-                      <svg class="twitter-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="facebook">
-                      <svg class="facebook-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="linkedin">
-                      <svg class="linkedin-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -221,29 +221,29 @@
               <div class="social-media">
                 <ul class="social-media-list">
                   <li class="social-media-item">
-                    <a href="#" class="instagram">
-                      <svg class="instagram-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="twitter">
-                      <svg class="twitter-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="facebook">
-                      <svg class="facebook-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="linkedin">
-                      <svg class="linkedin-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -265,29 +265,29 @@
               <div class="social-media">
                 <ul class="social-media-list">
                   <li class="social-media-item">
-                    <a href="#" class="instagram">
-                      <svg class="instagram-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="twitter">
-                      <svg class="twitter-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="facebook">
-                      <svg class="facebook-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="linkedin">
-                      <svg class="linkedin-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
@@ -309,29 +309,29 @@
               <div class="social-media">
                 <ul class="social-media-list">
                   <li class="social-media-item">
-                    <a href="#" class="instagram">
-                      <svg class="instagram-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="twitter">
-                      <svg class="twitter-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="facebook">
-                      <svg class="facebook-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-media-item">
-                    <a href="#" class="linkedin">
-                      <svg class="linkedin-icon">
+                    <a href="#" class="social-media-link">
+                      <svg class="social-icon">
                         <use href="/images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
