--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             </li>
             <li class="navigation-list-item">
               <a class="navigation-list-link" href="portfolio.html" type="_self"
-                >Portfolio</a
-              >
+                >Portfolio</a>
             </li>
             <li class="navigation-list-item">
               <a class="navigation-list-link" href="#">Kontakt</a>
@@ -39,27 +38,28 @@
         </nav>
 
 <ul class="mail-number-list">
-  <li class="mail-number-item">
-        <a href="#" class="envelope">
+
+
+
+<li class="mail-number-item">
+        <a class="mail" href="mailto:info@devstudio.com">
           <svg class="envelope-icon" width="16" height="12">
             <use href="/images/icons.svg#icon-envelope"></use>
           </svg>
-        </a>
-        </li>
-<li class="mail-number-item">
-        <a class="mail" href="mailto:info@devstudio.com">info@devstudio.com </a>
+          info@devstudio.com </a>
 
+      
 </li>
+
 <li class="mail-number-item">
-        <a href="#" class="smartphone">
+
+        <a class="phone-number" href="tel:+48111111111">
           <svg class="smartphone-icon" width="10" height="16">
             <use href="/images/icons.svg#icon-smartphone"></use>
           </svg>
-        </a>
-        </li>
-        <li class="mail-number-item">
-        <a class="phone-number" href="tel:+48111111111">+48 111 111 111</a>
-      </li>  
+          +48 111 111 111</a>
+      </li> 
+    
       </ul>
       </div>
     </header>
