--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 <li class="mail-number-item">
         <a class="mail" href="mailto:info@devstudio.com">
           <svg class="envelope-icon" width="16" height="12">
-            <use href="/images/icons.svg#icon-envelope"></use>
+            <use href="./images/icons.svg#icon-envelope"></use>
           </svg>
           info@devstudio.com </a>
 
@@ -55,7 +55,7 @@
 
         <a class="phone-number" href="tel:+48111111111">
           <svg class="smartphone-icon" width="10" height="16">
-            <use href="/images/icons.svg#icon-smartphone"></use>
+            <use href="./images/icons.svg#icon-smartphone"></use>
           </svg>
           +48 111 111 111</a>
       </li> 
@@ -242,28 +242,28 @@
                   <li class="footer-social-media-item">
                     <a href="#" class="footer-social-media-link">
                       <svg class="footer-social-icon">
-                        <use href="/images/icons.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="footer-social-media-item">
                     <a href="#" class="footer-social-media-link">
                       <svg class="footer-social-icon">
-                        <use href="/images/icons.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="footer-social-media-item">
                     <a href="#" class="footer-social-media-link">
                       <svg class="footer-social-icon">
-                        <use href="/images/icons.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="footer-social-media-item">
                     <a href="#" class="footer-social-media-link">
                       <svg class="footer-social-icon">
-                        <use href="/images/icons.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
